# solar-panel-damage-classification

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  train.py
conf/: config.yaml
conf/augmentation/: basic_augs.yaml  strong_augs.yaml  stronger_augs.yaml  stronger_augs_gray.yaml  stronger_augs_gray_v2.yaml
conf/callbacks/: callbacks.yaml
conf/dataset/: some_dataset.yaml
conf/loss/: bce_loss.yaml
conf/model/: mobilenet_v2.yaml  mobilenet_v3_large.yaml  mobilenet_v3_small.yaml
conf/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
conf/scheduler/: cosine.yaml  cyclic.yaml  multi_step_reg.yaml  plateau.yaml  step.yaml
conf/trainer/: default_trainer.yaml
conf/training/: default_training.yaml
data/: all_labels.csv  example.csv  test.csv  train.csv  val.csv
notebooks/: labels_count.ipynb
src/datasets/: SomeDataset.py
src/lightning_models/: LitModelClass.py
src/utils/: get_dataset.py  get_model.py  utils.py
